--- a/src/main/resources/templates/loans.html
+++ b/src/main/resources/templates/loans.html
@@ -45,7 +45,7 @@
 
     <div class="add-button-container">
         <a th:href="@{/loans/new}" class="btn btn-primary">📝 New Loan</a>
-        <a th:href="@{/loans/active-readers}" class="btn btn-success" target="_blank">👥 Active Readers Report</a>
+        <a th:href="@{/loans/active-readers-report}" class="btn btn-success">👥 Active Readers Report</a>
     </div>
 
     <div class="content-section">
